<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin">

        <Button
            android:id="@+id/pick_photo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Pick Photo"
            />

        <Button
            android:id="@+id/pick_doc"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Pick Doc"
            />

        <Button
            android:id="@+id/open_fragment"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Open Fragment Activity"
            android:onClick="onOpenFragmentClicked"
            />


        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recyclerview"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />


    </LinearLayout>
</androidx.core.widget.NestedScrollView>